--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Jhurs",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.1.1",
     "express": "^4.18.2"
   },
